--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "description": "Webman coroutine",
   "require": {
+    "php": ">=8.1",
     "workerman/workerman": "^5.0.0"
   },
   "autoload": {
